--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div id="app">
-    <!-- <video controls  name="media">
-      <source src="https://http-live.sr.se/p1-mp3-128" type="audio/mpeg">
-    </video> -->
-  </div>
-  <script type="module" src="script.js" allow="autoplay"></script>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css">
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="app">
+      <div class="container">
+        <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
+          <input name="q" type="text" placeholder="Search Google..." autocomplete="off" autofocus>
+          <!-- <button type="button"><i class="fas fa-microphone"></i></button> -->
+        </form>
+        <p class="info"></p>
+      </div>
+    </div>
+    <script type="module" src="/scripts/script.js"></script>
+  </body>
 </html>
