pages are separated

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <script type="module" src="scripts/script.js"></script>
     <script type="module" src="scripts/Button.js"></script>
     <script type="module" src="scripts/Speech_recognition_form.js"></script>
+    <script type="module" src="scripts/Page.js"></script>
+
   </body>
 </html>
